[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Entity Chooser.gd" type="Script" id=1]
[ext_resource path="res://Interface/MakeEntityPop.tscn" type="PackedScene" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 24.0

[node name="TextEntry" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_right = 725.0
margin_bottom = 24.0
size_flags_horizontal = 3
expand_to_text_length = true
clear_button_enabled = true
placeholder_text = "Enter Entity Name"
caret_blink = true
caret_blink_speed = 0.5

[node name="SearchButt" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 729.0
margin_right = 874.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
text = "Search"

[node name="NewEntityButt" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 878.0
margin_right = 1024.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
text = "Make"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="ButtContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 1024.0
size_flags_horizontal = 3

[node name="MakeEntityPop" parent="." instance=ExtResource( 2 )]

[connection signal="text_changed" from="VBoxContainer/HBoxContainer/TextEntry" to="." method="_on_TextEntry_text_changed"]
[connection signal="text_entered" from="VBoxContainer/HBoxContainer/TextEntry" to="." method="_on_TextEntry_text_entered"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/SearchButt" to="." method="_on_SearchButt_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/NewEntityButt" to="." method="_on_NewEntityButt_pressed"]
[connection signal="entity_created" from="MakeEntityPop" to="." method="_on_MakeEntityPop_entity_created"]
[connection signal="popup_hide" from="MakeEntityPop" to="." method="_on_MakeEntityPop_popup_hide"]
